--- a/arch/arm64/configs/hct6750_66_n_defconfig
+++ b/arch/arm64/configs/hct6750_66_n_defconfig
@@ -252,6 +252,8 @@ CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_PASSPOINT_R1_SUPPORT=y
 CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_GPS=y
+CONFIG_MTK_GPS=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6625_FM"
 CONFIG_MTK_ECCCI_DRIVER=y
