--- a/arch/arm64/configs/hct6750_66_n_defconfig
+++ b/arch/arm64/configs/hct6750_66_n_defconfig
@@ -1,5 +1,6 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="-Lone_KernelV2.0"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -533,7 +534,26 @@ CONFIG_PSTORE_CONSOLE_SIZE=0x40000
 CONFIG_PSTORE_PMSG_SIZE=0x10000
 CONFIG_PSTORE_MEM_ADDR=0x44410000
 CONFIG_PSTORE_MEM_SIZE=0xe0000
+
+#F2FS Support
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+# CONFIG_F2FS_FS_SECURITY is not set
+# CONFIG_F2FS_CHECK_FS is not set
 # CONFIG_NETWORK_FILESYSTEMS is not set
+
+# DOS/FAT/NT Filesystems
+CONFIG_FAT_FS=y
+CONFIG_MSDOS_FS=y
+CONFIG_VFAT_FS=y
+CONFIG_FAT_DEFAULT_CODEPAGE=437
+CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
+
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_CODEPAGE_950=y
 CONFIG_NLS_ASCII=y
@@ -690,3 +710,7 @@ CONFIG_MTK_QMCX983=y
 # CONFIG_CUSTOM_KERNEL_WAKE_GESTURE_SENSOR is not set
 # CONFIG_MTK_WAKEHUB is not set
 
+# DT2WAKE & SWEEP2WAKE
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
