--- a/arch/arm64/configs/lone_defconfig
+++ b/arch/arm64/configs/lone_defconfig
@@ -291,6 +291,10 @@ CONFIG_MTK_SMI_EXT=y
 # CONFIG_USB_MTK_HDRC is not set
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
 CONFIG_MTK_VIBRATOR=y
+
+# ThunderQuake Engine
+CONFIG_THUNDERQUAKE_ENGINE_GPL=y
+
 CONFIG_USB_XHCI_MTK=y
 CONFIG_USB_MTK_DUALMODE=y
 CONFIG_MTK_AEE_FEATURE=y
