--- a/arch/arm64/boot/dts/cust_mt6755_msdc.dtsi
+++ b/arch/arm64/boot/dts/cust_mt6755_msdc.dtsi
@@ -31,25 +31,14 @@
 	sd-uhs-sdr50;
 	sd-uhs-sdr104;
 	/*sd-uhs-ddr50;*/
-#if (__HCT_SD_CARD_HOTPLUG_SUPPORT__ == 1)	
-	cd-gpios = <&pio __HCT_MSDC_CD_GPIO_PIN_NUM__ 0>;
-#else
-	non-removable;
-#endif
 	pinctl = <&mmc1_pins_default>;
 	pinctl_sdr104 = <&mmc1_pins_sdr104>;
 	pinctl_sdr50 = <&mmc1_pins_sdr50>;
 	pinctl_ddr50 = <&mmc1_pins_ddr50>;
 	register_setting = <&mmc1_register_setting_default>;
 	host_function = /bits/ 8 <MSDC_SD>;
-
-#if defined(__HCT_MSDC_CD_POLARITY_HIGH__) && __HCT_MSDC_CD_POLARITY_HIGH__
-	cd_level = /bits/ 8 <MSDC_CD_HIGH>;
-#else
 	cd_level = /bits/ 8 <MSDC_CD_LOW>;
-#endif
-
-
+	cd-gpios = <&pio 83 0>;
 	status = "okay";
 	vmmc-supply = <&mt_pmic_vmch_ldo_reg>;
 	vqmmc-supply = <&mt_pmic_vmc_ldo_reg>;
@@ -155,7 +144,7 @@
 		datwrddly      = /bits/ 8 <0>;
 		cmdrrddly      = /bits/ 8 <0>;
 		cmdrddly       = /bits/ 8 <0>;
-		cmd_edge = /bits/ 8 <MSDC_SMPL_FALLING>;
+        cmd_edge = /bits/ 8 <MSDC_SMPL_RISING>;
 		rdata_edge = /bits/ 8 <MSDC_SMPL_FALLING>;
 		wdata_edge = /bits/ 8 <MSDC_SMPL_FALLING>;
 	};
