Implemented USB fast charging

--- a/arch/arm64/configs/lone_defconfig
+++ b/arch/arm64/configs/lone_defconfig
@@ -727,3 +727,6 @@ CONFIG_MTK_QMCX983=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+
+# USB Fast Charge
+CONFIG_FORCE_FAST_CHARGE=y
