--- a/drivers/power/mediatek/Kconfig
+++ b/drivers/power/mediatek/Kconfig
@@ -349,3 +349,10 @@ config MTK_BIF_SUPPORT
 	  smart battery.
 	  Set No to disable BIF feature of a
 	  smart battery.
+
+config FORCE_FAST_CHARGE
+ 	bool "Force faster charge rate for USB"
+ 	default n
+ 	help
+	  This allows users to override default charge rate for USB
+
